Adding note to where i want links

--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
 
 <head>
     <meta charset="UTF-8"/>
+    <title>Digital Journey</title>
     <link rel="stylesheet" href=".assets/css/style.css"/>
+    <meta name="" content=""> <!--add content here-->
 
 </head>
+
 <body>
+    <header></header> <!--add image & links for about me, work ,contact me--> 
+    <div></div> <!--add two images here one on top of each other with a title inside its own box-->
+    
 
 </body>
 </html>
