rearraged where i would want content to be

--- a/index.html
+++ b/index.html
@@ -10,8 +10,25 @@
 </head>
 
 <body>
-    <header></header> <!--add image & links for about me, work ,contact me--> 
-    <div></div> <!--add two images here one on top of each other with a title inside its own box-->
+    <header><h1><!--links to the left --> 
+    
+        <a>About me</a>
+        <a>Work</a>
+        <a>Contact Me</a>
+    </h1><!--links for about me, work ,contact me-->
+    </header> 
+
+    <div> <!--left side where my links will be directed-->
+        <section> <!--image of Aboutme--> About me 
+            <p>info onfo</p>
+        </section>
+        <section><!--image of Work--> Work 
+            <p>info onfo</p>
+        </section>
+        <section><!--image of contact me--> Contact me 
+            <p>info onfo</p>
+        </section>
+    </div> 
     
 
 </body>
