created a separtate div for about me & work

--- a/index.html
+++ b/index.html
@@ -19,16 +19,22 @@
     </header> 
 
     <div> <!--left side where my links will be directed-->
+        
+        <section><!--image of contact me--> Contact me 
+            <p>info onfo</p>
+        </section>
+        <section><!--image of resume--> Resume 
+            <p>info onfo</p>
+        </section>
+    </div> 
+
+    <div>
         <section> <!--image of Aboutme--> About me 
             <p>info onfo</p>
         </section>
         <section><!--image of Work--> Work 
             <p>info onfo</p>
-        </section>
-        <section><!--image of contact me--> Contact me 
-            <p>info onfo</p>
-        </section>
-    </div> 
+    </div>
     
 
 </body>
