added three iamges into assests folder for the header

--- a/index.html
+++ b/index.html
@@ -21,14 +21,17 @@
     <div> <!--left side where my links will be directed-->
         
         <section><!--image of contact me--> Contact me 
-            <p>info onfo</p>
+            <p>
+                <ul>silviavia209@gmail.com</ul>
+                <ul></ul>
+            </p>
         </section>
         <section><!--image of resume--> Resume 
             <p>info onfo</p>
         </section>
     </div> 
 
-    <div>
+    <div> <!--right side where-->
         <section> <!--image of Aboutme--> About me 
             <p>info onfo</p>
         </section>
