--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <header><h1><!--links to the left --> 
+    <header><h1>
+        <img src=".assets/signature.png"><!--links to the left --> 
     
         <a>About me</a>
         <a>Work</a>
