--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header><h1>
-        <img src=".assets/signature.png"><!--links to the left --> 
+        <img src="assets/signature.png"><!--links to the left --> 
     
         <a>About me</a>
         <a>Work</a>
