--- a/index.html
+++ b/index.html
@@ -10,19 +10,21 @@
 </head>
 
 <body>
-    <header><h1>
-        <img src="assets/signature.png"><!--links to the left --> 
-    
-        <a>About me</a>
-        <a>Work</a>
-        <a>Contact Me</a>
-    </h1><!--links for about me, work ,contact me-->
+    <header> 
+        <h1><img src="assets/signature.png"></h1> <!--resize the image-->
+    <nav class="nav"> <!--links to the left --> 
+        <a class="link"><href=""> About me</a>
+        <a class="link"><href="">Work</a>
+        <a class="link"><href="">Contact Me</a>
+        <a class="link"><href="">Resume</a>
+    </nav>
+   
     </header> 
 
     <div> <!--left side where my links will be directed-->
         
         <section><!--image of contact me--> Contact me 
-            <p>
+            <p> 
                 <ul>silviavia209@gmail.com</ul>
                 <ul></ul>
             </p>
