creating a main container with an aside and a section

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <header> 
         <h1><img src="assets/signature.png"></h1> <!--resize the image-->
     <nav class="nav"> <!--links to the left --> 
-        <a class="link"><href=""> About me</a>
-        <a class="link"><href="">Work</a>
-        <a class="link"><href="">Contact Me</a>
-        <a class="link"><href="">Resume</a>
+        <a class="link"><href=""> About me |</a>
+        <a class="link"><href="">Work |</a>
+        <a class="link"><href="">Contact Me |</a>
+        <a class="link"><href="">Resume |</a>
     </nav>
-   
-    </header> 
+   </header> 
 
+<main>
     <div> <!--left side where my links will be directed-->
         
         <section><!--image of contact me--> Contact me 
@@ -34,14 +34,16 @@
         </section>
     </div> 
 
-    <div> <!--right side where-->
+
+
+     <!--right side where-->
         <section> <!--image of Aboutme--> About me 
             <p>info onfo</p>
         </section>
         <section><!--image of Work--> Work 
             <p>info onfo</p>
-    </div>
     
 
+</main>
 </body>
 </html>
