--- a/index.html
+++ b/index.html
@@ -21,18 +21,23 @@
    </header> 
 
 <main>
-    <div> <!--left side where my links will be directed-->
+    <aside> <!--left side where my links will be directed-->
+        <div><img src="assets/bwsilvia.jpg"></div>
         
-        <section><!--image of contact me--> Contact me 
+        <section><!--image of contact me--> 
+            <h2>Contact me</h2>
             <p> 
                 <ul>silviavia209@gmail.com</ul>
                 <ul></ul>
             </p>
         </section>
-        <section><!--image of resume--> Resume 
+
+        <section>
+            <!--image of resume--> 
+            <h2>Resume</h2>
             <p>info onfo</p>
         </section>
-    </div> 
+    </aside> 
 
 
 
