added the correct stylesheetlink

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Digital Journey</title>
-    <link rel="stylesheet" href=".assets/css/style.css"/>
+    <link rel="stylesheet" href=".assets/style.css"/>
     <meta name="" content=""> <!--add content here-->
 
 </head>
@@ -23,7 +23,7 @@
 <main>
     <aside> <!--left side where my links will be directed-->
         <div><img src="assets/bwsilvia.jpg"></div>
-        
+
         <section><!--image of contact me--> 
             <h2>Contact me</h2>
             <p> 
