syntax error for assets/style sheet

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Digital Journey</title>
-    <link rel="stylesheet" href=".assets/style.css"/>
+    <link rel="stylesheet" href="assets/style.css"/>
     <meta name="" content=""> <!--add content here-->
 
 </head>
 
 <body>
-    <header> 
+    <header class="header"> 
         <h1><img src="assets/signature.png"></h1> <!--resize the image-->
     <nav class="nav"> <!--links to the left --> 
         <a class="link"><href=""> About me |</a>
