added width and height to ID image siganture

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header class="header"> 
-        <h1 id="signature"><img src="assets/signature.png"></h1> <!--resize the image-->
+        <h1><img id="signature" src ="assets/signature.png"> </h1> <!--resize the image-->
     <nav class="nav"> <!--links to the left --> 
         <a class="link"><href=""> About me |</a>
         <a class="link"><href="">Work |</a>
