added raius to my css siganture

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header class="header"> 
-        <h1><img src ="assets/signature.png"> </h1> <!--resize the image-->
+        <img class="signature" src ="assets/signature.png"> <!--resize the image-->
     <nav class="nav"> <!--links to the left --> 
         <a class="link"><href=""> About me |</a>
         <a class="link"><href="">Work |</a>
@@ -21,10 +21,11 @@
    </header> 
 
 <main>
-    <aside> <!--left side where my links will be directed-->
-        <div><img src="assets/bwsilvia.jpg"></div>
+    <section class="leftside"> <!--left side where my links will be directed-->
+        
+        <img class="my image" src="assets/bwsilvia.jpg">
 
-        <section><!--image of contact me--> 
+        <section class="contact me"><!--image of contact me--> 
             <h2>Contact me</h2>
             <p> 
                 <ul>silviavia209@gmail.com</ul>
@@ -32,12 +33,12 @@
             </p>
         </section>
 
-        <section>
+        <section class="resume">
             <!--image of resume--> 
             <h2>Resume</h2>
             <p>info onfo</p>
         </section>
-    </aside> 
+    </section> 
 
 
 
