croped photo and added backround color to div class leftsize

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
    </header> 
 
 <main>
-    <section class="leftside"> <!--left side where my links will be directed-->
+    <div class="leftside"> <!--left side where my links will be directed-->
         
         <img class="my image" src="assets/bwsilvia.jpg">
 
@@ -38,7 +38,7 @@
             <h2>Resume</h2>
             <p>info onfo</p>
         </section>
-    </section> 
+    </div> 
 
 
 
