added felx for display for my header and section nav

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <body>
     <header class="header"> 
         <img class="signature" src ="assets/signature.png"> <!--resize the image-->
-    <nav class="nav"> <!--links to the left --> 
+    <section nav class="nav"> <!--links to the left --> 
         <a class="link"><href=""> About me |</a>
         <a class="link"><href="">Work |</a>
         <a class="link" href= "#contact me"> Contact Me |</a>
-        <a class="link"><href="">Resume |</a>
-    </nav>
+        <a class="link" href="#resume">Resume |</a>
+    </section>
    </header> 
 
 <main>
@@ -25,7 +25,8 @@
         
         <img class="myimage" src="assets/bwsilvia.jpg">
 
-        <section id="contact me"><!--image of contact me--> 
+        <section id="contact me">
+            <!--image of contact me--> 
             <h2>Contact me</h2>
             <p> 
                 <ul>silviavia209@gmail.com</ul>
@@ -33,7 +34,7 @@
             </p>
         </section>
 
-        <section class="resume">
+        <section id="resume">
             <!--image of resume--> 
             <h2>Resume</h2>
             <p>info onfo</p>
@@ -43,7 +44,7 @@
 
 
      <!--right side where-->
-        <section> <!--image of Aboutme--> About me 
+        <section > <!--image of Aboutme--> About me 
             <p>info onfo</p>
         </section>
         <section><!--image of Work--> Work 
