--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <h2>Contact me</h2>
             <ul>silviavia209@gmail.com</ul>
             <ul>info</ul>
+            </section>
             
         
 
