remove linear lines for class link

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <header class="header"> 
         <img class="signature" src ="assets/signature.png"> <!--resize the image-->
     <section nav class="nav"> <!--links to the right --> 
-        <a class="link"><href=""> About me |</a>
-        <a class="link"><href="">Work |</a>
-        <a class="link" href= "#contact me"> Contact Me |</a>
-        <a class="link" href="#resume">Resume |</a>
+        <a class="link"><href=""> About me </a>
+        <a class="link"><href="">Work </a>
+        <a class="link" href= "#contact me"> Contact Me </a>
+        <a class="link" href="#resume">Resume </a>
     </section>
    </header> 
 
