added a title in myheader with a class

--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
 
 <body>
     <header class="header"> 
-        <img class="signature" src="assets/signature.png"></header><!--resize the image-->
-    <section nav class="nav"> <!--links to the right --> 
-        <a class="link"><href=""> About me </a>
-        <a class="link"><href="">Work </a>
-        <a class="link" href= "#contact me"> Contact Me </a>
-        <a class="link" href="#resume">Resume </a>
-    </section>
+        <img class="signature" src="assets/signature.png"><!--resize the image-->
+     <!--links to the right --> 
+     <h1 class="title"> Welcome to my Digital Journey</h1></header>
+     <nav class="nav">
+        <a id="link"><href=""> About me </a>
+        <a id="link"><href="">Work </a>
+        <a id="link" href= "#contact me"> Contact Me </a>
+        <a id="link" href="#resume">Resume </a>
+     </nav>
+        
+
     
 
 <main>
