added content paragraph for about me

--- a/index.html
+++ b/index.html
@@ -55,7 +55,12 @@
      <section id="aboutme"> 
         <!--image of Aboutme--> 
         <h2>About me</h2> 
-            <p>info onfo</p>
+            <p>Hi there! Im Silvia 
+                as an inspiring freelancer to support enterprenuership 
+                I had the privilage to contribute to a CSR startup within that journey it fueled 
+                my personal growth that thought me importance of a community impact. 
+                My goal is to bring to life that unappreciated talent we all have within.
+            </p>
         </section>
      
      
