--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
      <!--links to the right --> 
      <h1 class="title"> Welcome to my Digital Journey</h1></header>
      <nav class="nav">
-        <a id="link"><href=""> About me </a>
-        <a id="link"><href="">Work </a>
+        <a id="link" href="#aboutme"> About me </a>
+        <a id="link" href="#work">Work </a>
         <a id="link" href= "#contact me"> Contact Me </a>
         <a id="link" href="#resume">Resume </a>
      </nav>
@@ -54,8 +54,8 @@
      <div class="Rightside">
      <section id="aboutme"> 
         <!--image of Aboutme--> 
-        <h2>About me</h2> 
-            <p>Hi there! Im Silvia 
+        <h2>Hi there! Im Silvia</h2> 
+            <p> 
                 as an inspiring freelancer to support enterprenuership 
                 I had the privilage to contribute to a CSR startup within that journey it fueled 
                 my personal growth that thought me importance of a community impact. 
