added images to my readme about  my deployed poyects

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <!--image of Aboutme--> 
         <h2>Hi there! Im Silvia</h2> 
             <p> 
-                as an inspiring freelancer to support enterprenuership 
+                As an inspiring freelancer to support enterprenuership 
                 I had the privilage to contribute to a CSR startup within that journey it fueled 
                 my personal growth that thought me importance of a community impact. 
                 My goal is to bring to life that unappreciated talent we all have within.
@@ -69,7 +69,9 @@
         <section id="work">
         <!--image of Work-->
         <h2>Work </h2>
-            <p>info onfo</p>
+            <p>
+                
+            </p>
         </section>
     
     </section>
