added shadow to my title , incorporated a paraph in h1, i added shadow to my links

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <body>
     <header class="head"> 
-        <h1 class="title"> Welcome to my Digital Journey</h1>
+        <h1 class="title"> Welcome to my 
+        <p><span id="DigitalJourney">Digital Journey </span></p></h1>
      <!--links to the right --> 
      <nav class="nav">
         <a id="link" href="#aboutme"> About me </a>
