added links to deploued apps for img pws & c1

--- a/index.html
+++ b/index.html
@@ -79,10 +79,11 @@
         <h3>Work </h3>
         <article class="article">
             <p id="p1"><b>Prework-Study-guide:</b> git/ github/ html / css / javascript</p>
-            <img class="pws" src="assets/pws.png" atl="screenshot of pws">
+            <a href="https://s-via.github.io/prework-study-guide/" atl="link to deployed app"><img class="pws" src="assets/pws.png" atl="screenshot of pws"></a>
 
             <p id="p1"><b>Challenge-One:</b>git / github / html / css</p>
-            <img class="C1" src="assets/C1.png" atl="screenshot of C1">
+            <a href="https://s-via.github.io/Challenge-one/" atl="link to deployed app"> 
+            <img class="C1" src="assets/C1.png" atl="screenshot of C1"></a>
         </article>
         </section>
     
